--- a/pizza/templates/order/create_order.html
+++ b/pizza/templates/order/create_order.html
@@ -2,8 +2,21 @@
 
 <form action="" method="post" class="form">
     {% csrf_token %}
-        
-    {{ form.as_p }}
+    
+    {% for field in form %}
+        <div>
+            {{ field.label_tag }} {{ field }}
+        </div> 
+        {% if field.help_text %}
+            <p class="help"> {{ field.help_text|safe }} </p>
+        {% endif %}
+        {% if field.errors }
+            {% for error in field.errors %}
+                {{ error }}
+            {% endfor %}
+        {% endif %}
+    {% endfor %}
+    
     <input type="submit" class="order" value="place order">
 </form>
 
